force-app/main/default/objects/ACNT_RECP_DT__x/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <externalDeveloperName>PROJECT_CODE</externalDeveloperName>
    <label>Opportunity</label>
    <length>255</length>
    <referenceTargetField>Opportunity.WCGT_Job_ID__c</referenceTargetField>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>ACNT_RECP_DT</relationshipLabel>
    <relationshipName>ACNT_RECP_DT</relationshipName>
    <type>IndirectLookup</type>
</CustomField>