force-app/main/default/objects/ACNT_RECP_DT__x/fields/PM_ACCT_INVOICE_HD__c.field-meta.xml
<CustomField>
    <fullName>PM_ACCT_INVOICE_HD__c</fullName>
    <externalDeveloperName>PROJECT_ID</externalDeveloperName>
    <label>PM_ACCT_INVOICE_HD</label>
    <length>255</length>
    <referenceTo>PM_ACCT_INVOICE_HD__x</referenceTo>
    <relationshipLabel>ACNT_RECP_DT</relationshipLabel>
    <relationshipName>ACNT_RECP_DT</relationshipName>
    <type>ExternalLookup</type>
</CustomField>