force-app/main/default/objects/ACNT_RECP_DT__x/listViews/record_with_productcode.listView-meta.xml
<ListView>
    <fullName>record_with_productcode</fullName>
    <columns>DisplayUrl</columns>
    <columns>ExternalId</columns>
    <columns>Job__c</columns>
    <columns>Opportunity__c</columns>
    <columns>PM_ACCT_INVOICE_HD__c</columns>
    <columns>PROJECT_CODE__c</columns>
    <filterScope>Everything</filterScope>
    <label>record with productcode</label>
</ListView>